--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^ %1 [L,NE,R=302]
 
 #RewriteRule ^$/(.*)$ public/$1/$1 [L,NC] # permet de charger les fichier qui se trouve dans le dossier public
 RewriteRule ^css/(.*)$ public/css/$1 [L,NC] # permet de charger le css
+RewriteRule ^assets/*/(.*)$ public/assets/$1 [L,NC] # permet de charger le css
 
 
 RewriteRule ^(.*)$ public/index.php?$1 [L,QSA] # naviguer entre l'URL
